<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Whisper</string>
    <string name="desc_buddy_icon">Buddy icon</string>
    <string name="desc_send_button">Send button</string>
    <string name="desc_security_button">Security Info</string>
    <string name="list_messages">Messages</string>
    <string name="empty"></string>
    <string name="close">Close</string>
    <string name="clearmsg">Clear messages</string>
    <string name="voicemsg">Record voice message</string>
    <string name="conversation_with">Conversation with</string>
    <string name="remove">Remove</string>
    <string name="nickname">Nickname</string>
    <string name="broadcast_presence">Presence broadcast</string>
    <string name="broadcast_presence_desc">Broadcast your own presence on startup</string>
    <string name="preferences">Preferences</string>
    <string name="new_message_from">New message from</string>
    <string name="new_message">New message</string>
    <string name="presenceTag">Presence</string>
    <string name="messageduration">Message expiration</string>
    <string name="no_status_message">No status message</string>
    <string name="alert_missing_daemon">The DTN daemon is not installed. You need to install it and then re-install this application. Would you like to install it now?</string>
    <string name="alert_reinstall_app">You need to re-install this application to grant necessary permissions. Would you like to do this now?</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>
    <string name="dialog_me_title">My state</string>
    <string name="dialog_me_statushint">Your state message</string>
    <string name="message_settings">Messages</string>
    <string name="notification_settings">Notifications</string>
    <string name="vibrate_on_message">Vibrate</string>
    <string name="vibrate_on_message_desc">Vibrate on message reception</string>
    <string name="no_buddy_selected">No buddy selected</string>
    <string name="ringtone_on_message">Notification sound</string>
    <string name="ringtone_on_message_desc">Choose a notification sound for incoming messages.</string>
    <string name="hide_offline_contacts">Hide offline contacts</string>
    <string name="hide_offline_contacts_desc">Show only contacts recognized as online.</string>
    <string name="question_delete_messages">Do you really want to delete all messages sent to and received from this contact?</string>
    <string name="tts_when_on_headset">Read out the message</string>
    <string name="tts_when_on_headset_desc">Play messages via TTS when a headset is connected.</string>
    <string name="debug_notification">Debug Notification</string>
    <string name="debug_buddy_add">Add buddy</string>
    <string name="debug_send_presence">Send presence</string>
    <string name="debug_unregister">Unregister</string>
    <string name="image_contact_symbol">Contact symbol</string>
    <string name="type_to_compose_text_enter_to_send">Type message</string>
    <string name="action_keyinfo">Key information</string>
    <string name="action_trustinfo">Trust information</string>
    <string name="example_text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.</string>
    <string name="example_timestamp">12:34 AM</string>
    <string name="menu_pin">Always visible</string>
    <string name="menu_unpin">Show only if online</string>
</resources>