<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/message_fragment"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     
	<de.tubs.ibr.dtn.chat.BuddyDisplay
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/buddy_background"
	    android:orientation="horizontal"
	    android:padding="4dp"
	    android:id="@+id/buddy_display">
	
	    <ImageView
	        android:contentDescription="@string/desc_buddy_icon"
	        android:id="@+id/buddy_icon"
		    android:layout_width="24dp"
			android:layout_height="24dp"
	        android:layout_weight="0"
	        android:layout_margin="8dp"
	        android:src="@drawable/online" />
	    
	    <RelativeLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:padding="4dp">
	
		    <TextView
		        android:id="@+id/buddy_nickname"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignTop="@+id/buddy_icon"
		        android:layout_toRightOf="@+id/buddy_icon"
		        android:gravity="center_vertical"
		        android:textColor="@color/buddy_text"
		        android:text="@string/empty"
		        android:textSize="18dp" />
		
		    <TextView
		        android:id="@+id/buddy_statusmessage"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/buddy_nickname"
		        android:layout_below="@+id/buddy_nickname"
		        android:ellipsize="marquee"
		        android:singleLine="true"
		        android:textColor="@color/buddy_text"
		        android:text="@string/empty"
		        android:textSize="12dp" />
		    
	    </RelativeLayout>
	
	</de.tubs.ibr.dtn.chat.BuddyDisplay>

    <de.tubs.ibr.dtn.chat.MessageList
        android:id="@+id/list_messages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:transcriptMode="alwaysScroll"
        android:stackFromBottom="true">
    </de.tubs.ibr.dtn.chat.MessageList>
	
	<View
	    android:id="@+id/inputbox_separator"
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@color/border_menu_seperator" />
	
	<de.tubs.ibr.dtn.chat.MessageComposer
	    android:name="de.tubs.ibr.dtn.chat.InputFragment"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/inputbox_background"
	    android:id="@+id/message_composer">
	    
	      <EditText
	          android:id="@+id/textMessage"
	          android:layout_width="0dp"
	          android:layout_height="wrap_content"
	          android:layout_weight="1"
	          android:layout_margin="8dp"
	          android:ems="10"
	          android:inputType="textShortMessage|textMultiLine|textAutoCorrect|textCapSentences"
	          android:text="@string/empty"
	          android:imeOptions="actionSend">
	      </EditText>
	
		<ImageButton
		    android:id="@+id/buttonSend"
		    android:layout_width="48dp"
		    android:layout_height="match_parent"
		    android:layout_gravity="bottom"
		    android:layout_weight="0"
		    android:background="@drawable/button"
		    android:contentDescription="@string/desc_send_button"
		    android:onClick="sendMessage"
		    android:src="@drawable/ic_send" />
	
	</de.tubs.ibr.dtn.chat.MessageComposer>
    
 </LinearLayout>