<?xml version="1.0" encoding="utf-8"?>
<de.tubs.ibr.dtn.chat.MessageItem
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/chat_item_layout"
	android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="0dp"
    android:layout_margin="0dp">

    <ImageView
        android:contentDescription="@string/image_contact_symbol"
        android:id="@+id/imageAvatar"
        android:layout_alignParentLeft="true"
        android:layout_width="@dimen/avatar_width_height"
        android:layout_height="@dimen/avatar_width_height"
        android:src="@drawable/ic_contact_foreign" />
    
       <LinearLayout
           android:id="@+id/chat_block"
           android:minHeight="@dimen/avatar_width_height"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_toRightOf="@id/imageAvatar"
           android:layout_alignParentRight="true"
           android:background="@android:color/white"
           android:orientation="vertical" >

	    <TextView
			android:id="@+id/text"
			android:autoLink="all"
			android:paddingLeft="@dimen/chat_item_text_padding_left_right"
			android:paddingRight="@dimen/chat_item_text_padding_left_right"
			android:paddingTop="@dimen/chat_item_text_padding_top"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:linksClickable="true"
			android:text="@string/example_text"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textColor="#ff000000"
			android:textSize="16sp" />
	    
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:paddingRight="@dimen/chat_item_text_padding_left_right"
            android:paddingLeft="@dimen/chat_item_text_padding_left_right"
            android:orientation="horizontal" >

            <TextView android:id="@+id/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="3dip"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/example_timestamp"
                android:textColor="@color/text_hairline" />
            
            <ImageView
                android:id="@+id/pending_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dip"
                android:paddingRight="3dip"
                android:src="@drawable/ic_pending"
                android:visibility="gone" />
            
            <ImageView
                android:id="@+id/delivered_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dip"
                android:paddingRight="3dip"
                android:src="@drawable/ic_delivered"
                android:visibility="gone" />
            
            <ImageView
                android:id="@+id/signed_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dip"
                android:paddingRight="3dip"
                android:src="@drawable/ic_signed"
                android:visibility="gone" />
            
            <ImageView
                android:id="@+id/encrypted_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dip"
                android:paddingRight="3dip"
                android:src="@drawable/ic_secure"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/details_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dip"
                android:src="@drawable/ic_details"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</de.tubs.ibr.dtn.chat.MessageItem>